Port to retouche JConsole new integration Split wizards MXBean support Unit tests not yet ported.